--- a/pools.html
+++ b/pools.html
@@ -50,7 +50,7 @@ text-decoration: none;}
         <option value='table1'>Pool A</option>
         <option value='table2'>Pool B</option>
         </select>
-        <table id="table1" class="table table-striped">
+        <table id="table1" class="table table-striped sortable">
             <thead>
               <tr>
                 <th scope="col">Position</th>
@@ -58,7 +58,7 @@ text-decoration: none;}
                 <th scope="col">Matches Played</th>
                 <th scope="col">Wins</th>
                 <th scope="col">Loses</th>
-                <th scope="col">No result</th>
+                <th scope="col">Draws</th>
                 <th scope="col">Goal Difference</th>
                 <th scope="col">Points</th>
               </tr>
@@ -66,14 +66,15 @@ text-decoration: none;}
             <tbody class="table-group-divider">
               <tr>
                 <th scope="row">1</th>
-                <td>Skull Crushers</td>
-                <td>2</td>
+                <td>Curry Blasters</td>
+                <td>1</td>
+                <td>1</td>
                 <td>0</td>
-                <td>1</td>
-                <td>1</td>
-                <td>-2</td>
-                <td>1</td>
+                <td>0</td>
+                <td>+2</td>
+                <td>3</td>
               </tr>
+              
               <tr>
                 <th scope="row">2</th>
                 <td>Bomb Squad</td>
@@ -86,37 +87,38 @@ text-decoration: none;}
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Curry Blasters</td>
+                <td>Invincible Knights</td>
+                <td>2</td>
                 <td>1</td>
                 <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td>+2</td>
+                <td>+1</td>
                 <td>3</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
                 <td>Space Monkey Mafia</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
+                <td>1</td>
+                <td>0</td>
+                <td>1</td>
+                <td>1</td>
+                <td>-2</td>
+                <td>1</td>
               </tr>
+              
               <tr>
                 <th scope="row">5</th>
-                <td>Invincible Knights</td>
-                <td>1</td>
+                <td>Skull Crushers</td>
+                <td>2</td>
                 <td>0</td>
                 <td>1</td>
-                <td>0</td>
-                <td>-1</td>
-                <td>0</td>
+                <td>1</td>
+                <td>-2</td>
+                <td>1</td>
               </tr>
             </tbody>
         </table>
-        <table id="table2" class="table table-striped" style="display: none;">
+        <table id="table2" class="table table-striped sortable" style="display: none;">
             <thead>
               <tr>
                 <th scope="col">Position</th>
@@ -124,7 +126,7 @@ text-decoration: none;}
                 <th scope="col">Matches Played</th>
                 <th scope="col">Wins</th>
                 <th scope="col">Loses</th>
-                <th scope="col">No result</th>
+                <th scope="col">Draws</th>
                 <th scope="col">Goal Difference</th>
                 <th scope="col">Points</th>
               </tr>
@@ -132,26 +134,16 @@ text-decoration: none;}
             <tbody class="table-group-divider">
               <tr>
                 <th scope="row">1</th>
-                <td>Thunder Warriors</td>
-                <td>1</td>
+                <td>Spice FC</td>
+                <td>2</td>
+                <td>2</td>
                 <td>0</td>
-                <td>1</td>
                 <td>0</td>
-                <td>-3</td>
-                <td>0</td>
+                <td>+4</td>
+                <td>6</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Error 404</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-                <td>NA</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
                 <td>Mercurial Wingers</td>
                 <td>1</td>
                 <td>1</td>
@@ -161,14 +153,24 @@ text-decoration: none;}
                 <td>3</td>
               </tr>
               <tr>
+                <th scope="row">3</th>
+                <td>Thunder Warriors</td>
+                <td>2</td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+                <td>-2</td>
+                <td>3</td>
+              </tr>
+              <tr>
                 <th scope="row">4</th>
-                <td>Spice FC</td>
-                <td>2</td>
-                <td>2</td>
+                <td>Error 404</td>
+                <td>1</td>
                 <td>0</td>
+                <td>1</td>
                 <td>0</td>
-                <td>+4</td>
-                <td>6</td>
+                <td>-1</td>
+                <td>0</td>
               </tr>
               <tr>
                 <th scope="row">5</th>
