--- a/pools.html
+++ b/pools.html
@@ -8,15 +8,51 @@
     <link rel="stylesheet" href="/css/tables.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <style>
-  a{float: left;
-display: block;
-color: #ffffff;
-text-align: center;
-padding: 24px 26px;
-text-decoration: none;}
+    a{float: left;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 24px 26px;
+  text-decoration: none;}
+  .qual-header{
+    text-align: center;
+  }
+  .card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.card {
+  background-image: url('/assets/img/manager_photos/adidev.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;  
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  width: 20%;
+  /* height: px; */
+}
+
+.card h2 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
 </style>
   </head>
   <body style="font-family: Helvetica Neue; ">
@@ -67,32 +103,32 @@ text-decoration: none;}
               <tr>
                 <th scope="row">1</th>
                 <td>Curry Blasters</td>
-                <td>2</td>
-                <td>2</td>
+                <td>4</td>
+                <td>3</td>
                 <td>0</td>
-                <td>0</td>
-                <td>+8</td>
-                <td>6</td>
+                <td>1</td>
+                <td>+9</td>
+                <td>10</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Invincible Knights</td>
-                <td>3</td>
+                <td>4</td>
                 <td>2</td>
                 <td>1</td>
-                <td>0</td>
+                <td>1</td>
                 <td>+3</td>
-                <td>6</td>
+                <td>7</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td>Bomb Squad</td>
-                <td>2</td>
-                <td>1</td>
-                <td>0</td>
-                <td>1</td>
-                <td>+1</td>
                 <td>4</td>
+                <td>1</td>
+                <td>1</td>
+                <td>2</td>
+                <td>0</td>
+                <td>5</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
@@ -107,12 +143,12 @@ text-decoration: none;}
               <tr>
                 <th scope="row">5</th>
                 <td>Space Monkey Mafia</td>
-                <td>2</td>
+                <td>4</td>
                 <td>0</td>
+                <td>3</td>
                 <td>2</td>
-                <td>1</td>
                 <td>-8</td>
-                <td>1</td>
+                <td>2</td>
               </tr>
             </tbody>
         </table>
@@ -133,56 +169,79 @@ text-decoration: none;}
               <tr>
                 <th scope="row">1</th>
                 <td>Spice FC</td>
-                <td>3</td>
+                <td>4</td>
                 <td>3</td>
                 <td>0</td>
-                <td>0</td>
+                <td>1</td>
                 <td>+6</td>
-                <td>9</td>
+                <td>10</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Mercurial Wingers</td>
-                <td>2</td>
+                <td>4</td>
                 <td>2</td>
                 <td>0</td>
-                <td>0</td>
+                <td>2</td>
                 <td>+5</td>
-                <td>6</td>
+                <td>8</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td>Thunder Warriors</td>
-                <td>3</td>
+                <td>4</td>
                 <td>1</td>
                 <td>2</td>
-                <td>0</td>
+                <td>1</td>
                 <td>-3</td>
-                <td>3</td>
+                <td>4</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
                 <td>Fear Control</td>
-                <td>3</td>
+                <td>4</td>
                 <td>1</td>
                 <td>2</td>
-                <td>0</td>
+                <td>1</td>
                 <td>-3</td>
-                <td>3</td>
+                <td>4</td>
               </tr>
               <tr>
                 <th scope="row">5</th>
                 <td>Error 404</td>
-                <td>3</td>
+                <td>4</td>
                 <td>0</td>
-                <td>3</td>
+                <td>4</td>
                 <td>0</td>
-                <td>-5</td>
+                <td>-9</td>
                 <td>0</td>
               </tr>
             </tbody>
         </table>
     </section>
+      
+    <!-- <h1 class="qual-header">Qualifiers</h1>
+    <div class="card-container">
+      <div class="card">
+        <h2>Team 1</h2>
+        <img src="team1.jpg" alt="Team 1 Logo">
+      </div>
+      <div class="card">
+        <h2>Team 2</h2>
+        <img src="team2.jpg" alt="Team 2 Logo">
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="card">
+        <h2>Team 3</h2>
+        <img src="team3.jpg" alt="Team 3 Logo">
+      </div>
+      <div class="card">
+        <h2>Team 4</h2>
+        <img src="team4.jpg" alt="Team 4 Logo">
+      </div>
+    </div> -->
+  
     <script>
       function show(){
 var selectedTable= document.getElementById("drp").value;
